working crapfs